[package]
name = "checker"
version = "0.1.0"
authors = ["Stephen Wakely <fungus.humungus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.5"
env_logger = "0.8.4"
futures = "0.3.15"
serde = "1.0.126"
serde_json = "1.0.64"
tracing = { version = "0.1.26", features = ["log"] }
